--- a/app/src/main/res/layout/activity_admin_assigned_vehicle_details.xml
+++ b/app/src/main/res/layout/activity_admin_assigned_vehicle_details.xml
@@ -16,7 +16,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/secondary"
-                android:layout_marginStart="12dp"
                 android:layout_marginVertical="12dp"
                 android:orientation="vertical"
                 android:backgroundTint="@color/secondary">
@@ -118,22 +117,31 @@
                         android:layout_width="90dp"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
+                        android:layout_marginStart="12dp"
                         android:text="Location"
                         android:textColor="@color/primary"
                         android:textSize="18sp"
                         tools:ignore="RtlSymmetry" />
 
-                    <ImageView
-                        android:id="@+id/LocationID"
-                        android:layout_width="match_parent"
-                        android:layout_height="237dp"
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="125dp"
+                        android:layout_height="20dp"
+                        android:id="@+id/retriveLocation"
                         android:layout_gravity="center_horizontal"
-                        android:fontFamily="monospace"
-                        android:text="vehicle status"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        tools:ignore="RtlSymmetry" />
+                        android:layout_marginVertical="12dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/edit_text_border"
+                        android:gravity="center"
+                        android:text="Retrieve Location"
+                        android:textSize="12sp"
+                        android:textColor="@color/primary">
+                    </androidx.appcompat.widget.AppCompatButton>
+
+                    <fragment
+                        android:id="@+id/google_map"
+                        android:layout_width="match_parent"
+                        android:layout_height="500dp"
+                        android:name="com.google.android.gms.maps.SupportMapFragment" />
 
                 </LinearLayout>
 
