--- a/app/src/main/res/layout/activity_admin_assign_driver_vehicle.xml
+++ b/app/src/main/res/layout/activity_admin_assign_driver_vehicle.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:layout_marginTop="12dp"
-        android:text="A list of all the Drivers"
+        android:text="A list of Available Drivers"
         android:textColor="@color/primary"
         android:textSize="20sp">
     </TextView>
