added upload image

--- a/app/src/main/res/layout/activity_admin_assigned_vehicle_details.xml
+++ b/app/src/main/res/layout/activity_admin_assigned_vehicle_details.xml
@@ -39,6 +39,31 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/black"
+                        android:gravity="center"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="vertical">
+
+
+                        <ImageView
+                            android:id="@+id/ImageID"
+                            android:layout_width="300dp"
+                            android:layout_height="150dp"
+                            android:layout_marginBottom="5dp"
+                            android:fontFamily="monospace"
+                            android:paddingStart="12dp"
+                            android:background="@drawable/truck"
+                            android:text="plate Number"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            tools:ignore="RtlSymmetry" />
+
+
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -158,9 +183,6 @@
                         android:name="com.google.android.gms.maps.SupportMapFragment" />
 
                 </LinearLayout>
-
-
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -169,20 +191,6 @@
                     android:layout_gravity="center_vertical"
                     android:orientation="vertical">
 
-
-                    <ImageView
-                        android:id="@+id/ImageID"
-                        android:layout_width="300dp"
-                        android:layout_height="150dp"
-                        android:layout_marginBottom="5dp"
-                        android:fontFamily="monospace"
-                        android:paddingStart="12dp"
-                        android:background="@drawable/truck"
-                        android:text="plate Number"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        tools:ignore="RtlSymmetry" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:layout_width="200dp"
@@ -198,6 +206,10 @@
                     </androidx.appcompat.widget.AppCompatButton>
 
                 </LinearLayout>
+
+
+
+
 
             </LinearLayout>
 
