--- a/app/src/main/res/layout/fragment_vehicles.xml
+++ b/app/src/main/res/layout/fragment_vehicles.xml
@@ -25,6 +25,31 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/black"
                     android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/black"
+                        android:gravity="center"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="vertical">
+
+
+                        <ImageView
+                            android:id="@+id/ImageID"
+                            android:layout_width="300dp"
+                            android:layout_height="150dp"
+                            android:layout_marginBottom="5dp"
+                            android:fontFamily="monospace"
+                            android:paddingStart="12dp"
+                            android:background="@drawable/truck"
+                            android:text="plate Number"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            tools:ignore="RtlSymmetry" />
+
+
+                    </LinearLayout>
                     <TextView
                         android:id="@+id/modelDescriptionIDFrag"
                         android:layout_width="wrap_content"
@@ -42,7 +67,7 @@
                         android:layout_width="wrap_content"
                         android:layout_marginStart="15dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
+                        android:layout_marginBottom="15dp"
                         android:fontFamily="monospace"
                         android:text="plate Number"
                         android:textColor="@color/black"
@@ -50,20 +75,6 @@
                         android:textStyle="bold"
                         tools:ignore="RtlSymmetry" />
 
-                    <ImageView
-                        android:id="@+id/ImageID"
-                        android:layout_width="300dp"
-                        android:layout_height="150dp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginBottom="5dp"
-                        android:fontFamily="monospace"
-                        android:paddingStart="12dp"
-                        android:background="@drawable/truck"
-                        android:text="plate Number"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        tools:ignore="RtlSymmetry" />
                     <TextView
                         android:layout_width="90dp"
                         android:layout_height="wrap_content"
