--- a/app/src/main/res/layout/activity_image_picker.xml
+++ b/app/src/main/res/layout/activity_image_picker.xml
@@ -21,7 +21,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:gravity="center">
 
 
         <androidx.appcompat.widget.AppCompatButton
@@ -35,18 +35,6 @@
             android:textSize="12sp"
             android:layout_marginVertical="10dp"
             android:layout_marginHorizontal="10dp"
-            tools:ignore="HardcodedText" />
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="180dp"
-            android:layout_height="35dp"
-            android:text="Take Photo"
-            android:id="@+id/camera"
-            android:background="@drawable/edit_text_border"
-            android:textColor="@color/primary"
-            android:layout_gravity="center"
-            android:textSize="12sp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             tools:ignore="HardcodedText" />
 
 
