--- a/app/src/main/res/layout/activity_admin_assigned_vehicle_details.xml
+++ b/app/src/main/res/layout/activity_admin_assigned_vehicle_details.xml
@@ -183,6 +183,67 @@
                         android:name="com.google.android.gms.maps.SupportMapFragment" />
 
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="90dp"
+                    android:layout_marginStart="15dp"
+                    android:id="@+id/tv1"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:fontFamily="monospace"
+                    android:text="Location"
+                    android:textColor="@color/primary"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    tools:ignore="RtlSymmetry" />
+                <TextView
+                    android:layout_width="90dp"
+                    android:layout_marginStart="15dp"
+                    android:id="@+id/tv2"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:fontFamily="monospace"
+                    android:text="Location"
+                    android:textColor="@color/primary"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    tools:ignore="RtlSymmetry" />
+                <TextView
+                    android:layout_width="90dp"
+                    android:layout_marginStart="15dp"
+                    android:id="@+id/tv3"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:fontFamily="monospace"
+                    android:text="Location"
+                    android:textColor="@color/primary"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    tools:ignore="RtlSymmetry" />
+                <TextView
+                    android:layout_width="90dp"
+                    android:layout_marginStart="15dp"
+                    android:id="@+id/tv4"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:fontFamily="monospace"
+                    android:text="Location"
+                    android:textColor="@color/primary"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    tools:ignore="RtlSymmetry" />
+                <TextView
+                    android:layout_width="90dp"
+                    android:layout_marginStart="15dp"
+                    android:id="@+id/tv5"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:fontFamily="monospace"
+                    android:text="Location"
+                    android:textColor="@color/primary"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    tools:ignore="RtlSymmetry" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
