--- a/app/src/main/res/layout/fragment_vehicles.xml
+++ b/app/src/main/res/layout/fragment_vehicles.xml
@@ -4,7 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="45dp"
+    android:orientation="vertical"
     tools:context=".fragments.Vehicles">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:background="@color/primary"
+        android:text="Assigned Vehicle"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingStart="12dp"
+        android:textColor="@color/secondary"
+        android:textSize="18sp"
+        android:layout_marginBottom="5dp"
+        tools:ignore="HardcodedText,RtlSymmetry"/>
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/my_drawer_layout"
@@ -25,6 +38,15 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/black"
                     android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="The Following Vehicle Has Been Assigned To You"
+                        android:paddingStart="5dp"
+                        android:textColor="@color/primary"
+                        android:textSize="18sp"
+                        android:layout_marginBottom="10dp"
+                        tools:ignore="HardcodedText,RtlSymmetry"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -34,10 +56,11 @@
                         android:orientation="vertical">
 
 
+
                         <ImageView
                             android:id="@+id/ImageID"
-                            android:layout_width="300dp"
-                            android:layout_height="150dp"
+                            android:layout_width="350dp"
+                            android:layout_height="200dp"
                             android:layout_marginBottom="5dp"
                             android:fontFamily="monospace"
                             android:paddingStart="12dp"
@@ -50,41 +73,73 @@
 
 
                     </LinearLayout>
-                    <TextView
-                        android:id="@+id/modelDescriptionIDFrag"
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginBottom="5dp"
-                        android:fontFamily="monospace"
-                        android:text="model Description"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        tools:ignore="RtlSymmetry" />
-                    <TextView
-                        android:id="@+id/plateNumberIDFrag"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:text="Model"
+                            android:paddingStart="12dp"
+                            android:textColor="@color/primary"
+                            android:textSize="18sp"
+                            android:layout_marginBottom="5dp"
+                            tools:ignore="HardcodedText,RtlSymmetry"/>
+                        <TextView
+                            android:id="@+id/modelDescriptionIDFrag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginBottom="5dp"
+                            android:text="model Description"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            tools:ignore="RtlSymmetry" />
+
+                    </LinearLayout>
+                    <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_marginStart="15dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="15dp"
-                        android:fontFamily="monospace"
-                        android:text="plate Number"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        tools:ignore="RtlSymmetry" />
+                        android:layout_gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:text="Plate"
+                            android:paddingStart="12dp"
+                            android:textColor="@color/primary"
+                            android:textSize="18sp"
+                            android:layout_marginBottom="5dp"
+                            tools:ignore="HardcodedText,RtlSymmetry"/>
+
+                        <TextView
+                            android:id="@+id/plateNumberIDFrag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginBottom="15dp"
+                            android:text="plate Number"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            tools:ignore="RtlSymmetry" />
+
+                    </LinearLayout>
+
+
 
                     <TextView
-                        android:layout_width="90dp"
+                        android:layout_width="185dp"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
                         android:layout_marginStart="15dp"
-                        android:fontFamily="monospace"
-                        android:text="Location"
+                        android:text="Your Current Location"
                         android:textColor="@color/primary"
                         android:textSize="18sp"
-                        android:textStyle="bold"
                         tools:ignore="RtlSymmetry" />
 
                     <fragment
@@ -154,19 +209,7 @@
                         android:textStyle="bold"
                         tools:ignore="RtlSymmetry" />
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:layout_width="200dp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginBottom="15dp"
-                        android:layout_height="35dp"
-                        android:id="@+id/AssignedvehicleBtn"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginVertical="12dp"
-                        android:background="@drawable/edit_text_border"
-                        android:gravity="center"
-                        android:text="Return Vehicle"
-                        android:textColor="@color/primary">
-                    </androidx.appcompat.widget.AppCompatButton>
+
 
                 </LinearLayout>
 
