--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -53,11 +53,12 @@
                         </TextView>
                     </LinearLayout>
 
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="30dp"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="20dp"
                         android:layout_marginEnd="30dp"
 
                         android:orientation="vertical">
@@ -94,6 +95,31 @@
                             android:textSize="18sp"
                             android:textColor="@color/black"
                             tools:ignore="RtlSymmetry" />
+                        <LinearLayout
+                            android:layout_width="300dp"
+                            android:layout_height="55dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_gravity="center"
+                            android:background="@drawable/edit_text_border"
+                            android:orientation="horizontal">
+
+                            <EditText
+                                android:id="@+id/phoneNumber"
+                                android:layout_width="200dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginStart="2dp"
+                                android:layout_height="30dp"
+                                android:background="@color/white"
+                                android:textColor="@color/black"
+                                android:paddingStart="12dp"
+                                android:autofillHints=""
+                                android:ems="10"
+                                android:hint="Phone Number"
+                                android:textColorHint="@color/primary"
+                                android:textSize="18sp"
+                                tools:ignore="HardcodedText,RtlSymmetry,TextFields"  />
+
+                        </LinearLayout>
 
                         <EditText
                             android:id="@+id/enter_email"
@@ -111,6 +137,8 @@
                             android:textColorHint="@color/primary"
                             android:textSize="18sp"
                             tools:ignore="RtlSymmetry,TextFields" />
+
+
 
                         <LinearLayout
                             android:layout_width="300dp"
