--- a/app/src/main/res/layout/activity_assigned_vehicles_list.xml
+++ b/app/src/main/res/layout/activity_assigned_vehicles_list.xml
@@ -1,68 +1,222 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".activities.AdminVehiclesActivity">
-
+    android:layout_marginBottom="45dp"
+    android:orientation="vertical">
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="12dp"
-        android:text="Vehicles available in the garage"
-        android:textColor="@color/primary"
-        android:textSize="20sp">
-    </TextView>
-
-    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".activities.MainActivity"
-        android:id="@+id/FrameLayout">
+        android:layout_height="35dp"
+        android:background="@color/primary"
+        android:text="Assigned Vehicle"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingStart="12dp"
+        android:textColor="@color/secondary"
+        android:textSize="18sp"
+        android:layout_marginBottom="5dp"
+        tools:ignore="HardcodedText,RtlSymmetry"/>
 
-        <androidx.drawerlayout.widget.DrawerLayout
-            android:id="@+id/my_drawer_layout"
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/my_drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ScrollView
+            android:layout_height="wrap_content">
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@color/secondary"
+                android:orientation="vertical"
+                android:backgroundTint="@color/secondary">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:backgroundTint="@color/black"
                     android:orientation="vertical">
-
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="The Following Vehicle Has Been Assigned To You"
+                        android:paddingStart="5dp"
+                        android:textColor="@color/primary"
+                        android:textSize="18sp"
+                        android:layout_marginBottom="10dp"
+                        tools:ignore="HardcodedText,RtlSymmetry"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:backgroundTint="@color/black"
+                        android:gravity="center"
+                        android:layout_gravity="center_vertical"
                         android:orientation="vertical">
 
 
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/vehiclesRecycler2"/>
+
+                        <ImageView
+                            android:id="@+id/ImageID"
+                            android:layout_width="350dp"
+                            android:layout_height="200dp"
+                            android:layout_marginBottom="5dp"
+                            android:fontFamily="monospace"
+                            android:paddingStart="12dp"
+                            android:background="@drawable/truck"
+                            android:text="plate Number"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            tools:ignore="RtlSymmetry" />
 
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:text="Model"
+                            android:paddingStart="12dp"
+                            android:textColor="@color/primary"
+                            android:textSize="18sp"
+                            android:layout_marginBottom="5dp"
+                            tools:ignore="HardcodedText,RtlSymmetry"/>
+                        <TextView
+                            android:id="@+id/modelDescriptionIDFrag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginBottom="5dp"
+                            android:text="model Description"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            tools:ignore="RtlSymmetry" />
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:text="Plate"
+                            android:paddingStart="12dp"
+                            android:textColor="@color/primary"
+                            android:textSize="18sp"
+                            android:layout_marginBottom="5dp"
+                            tools:ignore="HardcodedText,RtlSymmetry"/>
+
+                        <TextView
+                            android:id="@+id/plateNumberIDFrag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginBottom="15dp"
+                            android:text="plate Number"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            tools:ignore="RtlSymmetry" />
+
+                    </LinearLayout>
+
+
+
+                    <TextView
+                        android:layout_width="185dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginStart="15dp"
+                        android:text="Your Current Location"
+                        android:textColor="@color/primary"
+                        android:textSize="18sp"
+                        tools:ignore="RtlSymmetry" />
+
+                    <fragment
+                        android:id="@+id/google_map"
+                        android:layout_width="match_parent"
+                        android:layout_height="500dp"
+                        android:name="com.google.android.gms.maps.SupportMapFragment" />
+
+                    <TextView
+                        android:layout_width="90dp"
+                        android:layout_marginStart="15dp"
+                        android:id="@+id/tv1"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:fontFamily="monospace"
+                        android:text="Location"
+                        android:textColor="@color/primary"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        tools:ignore="RtlSymmetry" />
+                    <TextView
+                        android:layout_width="90dp"
+                        android:layout_marginStart="15dp"
+                        android:id="@+id/tv2"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:fontFamily="monospace"
+                        android:text="Location"
+                        android:textColor="@color/primary"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        tools:ignore="RtlSymmetry" />
+                    <TextView
+                        android:layout_width="90dp"
+                        android:layout_marginStart="15dp"
+                        android:id="@+id/tv3"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:fontFamily="monospace"
+                        android:text="Location"
+                        android:textColor="@color/primary"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        tools:ignore="RtlSymmetry" />
+                    <TextView
+                        android:layout_width="90dp"
+                        android:layout_marginStart="15dp"
+                        android:id="@+id/tv4"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:fontFamily="monospace"
+                        android:text="Location"
+                        android:textColor="@color/primary"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        tools:ignore="RtlSymmetry" />
+                    <TextView
+                        android:layout_width="90dp"
+                        android:layout_marginStart="15dp"
+                        android:id="@+id/tv5"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:fontFamily="monospace"
+                        android:text="Location"
+                        android:textColor="@color/primary"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        tools:ignore="RtlSymmetry" />
+
+
+
                 </LinearLayout>
 
-
-            </ScrollView>
-
+            </LinearLayout>
 
 
-        </androidx.drawerlayout.widget.DrawerLayout>
-
-    </FrameLayout>
-
-
+        </ScrollView>
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 
 
