--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -8,10 +8,7 @@
         android:title="Profile"
         android:icon="@drawable/profile" />
 
-    <item
-        android:id="@+id/info"
-        android:title="More Information"
-        android:icon="@drawable/info"/>
+
 
     <item
         android:id="@+id/FAQ"
@@ -20,7 +17,7 @@
 
     <item
         android:id="@+id/nav_settings"
-        android:title="About Us"
+        android:title="Contact Us"
         android:icon="@drawable/profile_icon"/>
 
 
