--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragment_container"
     tools:context=".fragments.Home">
 
     <androidx.drawerlayout.widget.DrawerLayout
@@ -14,49 +15,65 @@
             android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/ImageBannerId"
+                    android:background="@drawable/banner"
+                    android:layout_width="match_parent"
+                    android:layout_height="275dp"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="85dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginHorizontal="15dp"
                     android:layout_marginBottom="50dp"
                     android:orientation="vertical">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="WELCOME TO FLITRACKA"
                         android:layout_gravity="center_horizontal"
-                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut dui dictum, euismod sem ac, auctor nibh. Suspendisse potenti. Integer consectetur dignissim egestas. Nunc posuere et diam at aliquam."
-                        android:textColor="@color/black"
-                        android:textSize="14sp">
+                        android:textColor="@color/primary"
+                        android:textSize="25sp">
                     </TextView>
+
+                    <TextView
+                        android:id="@+id/welcomeTextId1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/black"
+                        android:textSize="19sp">
+                    </TextView>
+                    <TextView
+                        android:id="@+id/welcomeTextId2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/black"
+                        android:textSize="19sp">
+                    </TextView>
+                    <TextView
+                        android:id="@+id/welcomeTextId3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/black"
+                        android:textSize="19sp">
+                    </TextView>
+
                 </LinearLayout>
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="200dp"
-                    android:layout_height="35dp"
-                    android:id="@+id/AssignedvehicleBtn"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginVertical="12dp"
-                    android:background="@drawable/round_btn"
-                    android:gravity="center"
-                    android:text="select Assigned Vehicle"
-                    android:textColor="@color/white">
-                </androidx.appcompat.widget.AppCompatButton>
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="200dp"
-                    android:layout_height="35dp"
-                    android:id="@+id/drivers_button"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginVertical="12dp"
-                    android:background="@drawable/round_btn"
-                    android:gravity="center"
-                    android:text="Do something"
-                    android:textColor="@color/white">
-                </androidx.appcompat.widget.AppCompatButton>
             </LinearLayout>
+
         </ScrollView>
     </androidx.drawerlayout.widget.DrawerLayout>
+
+
+
 
 
 
