--- a/app/src/main/res/layout/fragment_vehicles.xml
+++ b/app/src/main/res/layout/fragment_vehicles.xml
@@ -19,19 +19,19 @@
         android:layout_marginBottom="5dp"
         tools:ignore="HardcodedText,RtlSymmetry"/>
 
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/my_drawer_layout"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
+        android:layout_height="wrap_content"
+        android:background="@color/secondary"
+        android:orientation="vertical"
+        android:backgroundTint="@color/secondary"
+        android:id="@+id/regular_layout"
+        android:visibility="gone">
+
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondary"
-                android:orientation="vertical"
-                android:backgroundTint="@color/secondary">
+                android:layout_height="wrap_content">
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -213,11 +213,51 @@
 
                 </LinearLayout>
 
-            </LinearLayout>
 
 
-        </ScrollView>
-    </androidx.drawerlayout.widget.DrawerLayout>
+
+
+            </ScrollView>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/secondary"
+        android:orientation="vertical"
+        android:backgroundTint="@color/secondary"
+        android:id="@+id/empty_layout"
+        android:visibility="gone">
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:paddingStart="12dp"
+            android:textColor="@color/purple_500"
+            android:textSize="18sp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="150dp"
+            android:background="@drawable/empty"
+            tools:ignore="HardcodedText,RtlSymmetry"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:text="You Do Not Have A Vehicle Assigned"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:paddingStart="12dp"
+            android:textColor="@color/purple_500"
+            android:textSize="18sp"
+            android:layout_marginBottom="5dp"
+            tools:ignore="HardcodedText,RtlSymmetry"/>
+
+
+    </LinearLayout>
+
+
 
 
 
