--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,14 +3,14 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_200">#9C27B0</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary">#009688</color>
+    <color name="primary2">#009688</color>
     <color name="secondary">#FFFFFF</color>
     <color name="tertiary">#F3E9F4</color>
-    <color name="primary2">#03A9F4</color>
+    <color name="primary">#6200EE</color>
     <color name="red">#F40303</color>
     <color name="blue">#1D39D5</color>
     <color name="menu_item_text_color">#F8F4F4</color>
